add: video-edit.html

--- a/find-id-complete.html
+++ b/find-id-complete.html
@@ -37,7 +37,7 @@
         <main id="main" class="user-auth">
             <div class= "inner"> 
                 <div class="user-auth-wrap find-result-wrap">
-                    <h3 class="main-title">아이디 / 비밀번호 찾기</h3>
+                    <h3 class="main-title font-IBM">아이디 / 비밀번호 찾기</h3>
                     <ul class="tab-view">
                         <li class="tab-active">아이디 찾기</li>
                         <li class="tab-disb">비밀번호 찾기</li> 
