--- a/login.html
+++ b/login.html
@@ -37,7 +37,7 @@
         <main id="main" class="user-auth">
             <div class= "inner"> 
                 <div class="user-auth-wrap login-wrap">
-                    <h3 class="main-title">로그인</h3>
+                    <h3 class="main-title font-IBM">로그인</h3>
                     <div class="input_wrap">
                         <div class="input_container">
                             <label for="id" class="input_title">
