--- a/register-agree.html
+++ b/register-agree.html
@@ -37,7 +37,7 @@
         <main id="main" class="user-auth">
             <div class= "inner"> 
                 <div class="user-auth-wrap agree-wrap">
-                    <h3 class="main-title">회원가입</h3>
+                    <h3 class="main-title font-IBM">회원가입</h3>
                     <div class="guide-title">
                         <span>회원가입을 위한 서비스 약관에 동의해주세요.</span>
                     </div>
