--- a/register-hp.html
+++ b/register-hp.html
@@ -37,7 +37,7 @@
         <main id="main" class="user-auth">
             <div class= "inner"> 
                 <div class="user-auth-wrap">
-                    <h3 class="main-title">본인인증</h3>
+                    <h3 class="main-title font-IBM">본인인증</h3>
                     <div class="guide-title">
                         <span>입력한 휴대폰 번호로 인증 후 회원가입이 진행됩니다. </span>
                     </div>
