--- a/video-making.html
+++ b/video-making.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" as="style" crossorigin href="https://cdn.jsdelivr.net/gh/orioncactus/pretendard@v1.3.8/dist/web/variable/pretendardvariable.css" />
-    <title>Viral | 비디오 템플릿 스타일</title>
+    <title>Viral | 비디오 템플릿 스타일 - 레이아웃</title>
     <script src="https://code.jquery.com/jquery-latest.min.js"></script>
     <link rel="stylesheet" href="css/main.css">
 
@@ -153,7 +153,7 @@
                 <section class="content-area">
                     <article class="content-wrap">
                         <div class="content-inner making-inner">
-                            <h3 class="content-title">
+                            <h3 class="content-title font-IBM">
                                 비디오 템플릿 스타일
                                 <span class="title-descript">제목 자막 스타일 및 영상 레이아웃, 배경색상을 직접 업로드하여 커스텀 영상을 제작하세요.</span>
                             </h3>
