--- a/video.html
+++ b/video.html
@@ -155,12 +155,12 @@
                         <div class="alert">비디오 템플릿은 최대 3개까지 생성이 가능합니다.</div>
                         
                         <div class="content-inner video-inner">
-                            <h3 class="content-title">
+                            <h3 class="content-title m-top50">
                                 비디오 템플릿 스타일 
                                 <span class="title-descript">나만의 스타일대로 템플릿을 꾸며보세요! 설정한 템플릿은 숏폼에 반영됩니다.</span>
                             </h3>
 
-                            <div class="content-item template-item template-fit">
+                            <div class="content-item template-item">
                                 <!-- 최근 사용한 템플릿 -->
                                 <div class="recent-wrap template-wrap">
                                     <div class="title">
@@ -227,7 +227,7 @@
                         </div>
 
                         <div class="templateBtn-wrap">
-                            <button type="button" class="templaeteBtn">템플릿 추가하기</button>
+                            <button type="button" class="templaeteBtn" onclick="location.href='video-making.html'">템플릿 추가하기</button>
                         </div>
                     </article>
                 </section>
