--- a/sample.html
+++ b/sample.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" as="style" crossorigin href="https://cdn.jsdelivr.net/gh/orioncactus/pretendard@v1.3.8/dist/web/variable/pretendardvariable.css" />
-    <title>Viral</title>
+    <title>Viral | 화면이름</title>
     <script src="https://code.jquery.com/jquery-latest.min.js"></script>
     <link rel="stylesheet" href="css/main.css">
 
@@ -153,7 +153,9 @@
                 <!-- 컨텐츠 영역 -->
                 <section class="content-area">
                     <article class="content-wrap">
-                        
+                        <div class="content-inner making-inner">
+                            
+                        </div>
                     </article>
                 </section>
             </div>
